Set min java version to 17.